# myTEK5030

./: This is Lab00
lab_01-master/lab_01-master/: README.md
lab_01-master/lab_01-master/lab-guide/: 1-get-to-know-eigen.md  2-image-transformations-with-eigen-and-opencv.md
lab_01-master/lab_01-master/lab_01_eigen/: main.cpp
lab_01-master/lab_01-master/lab_01_transformations/: main.cpp
project_template-master/project_template-master/: CMakeLists.txt  README.md  main.cpp
tek5030_exam_2020-master/: 1b_show_grid.cpp  2b_create_map.cpp  3b_detect_train.cpp  3c_and_3d_map_detections.cpp  CMakeLists.txt  README.md  flyby.cpp  flyby.h  flyby_correspondences.h  match_symmetric.h  train_detection.cpp  train_detection.h
tek5030_exam_2020-master/matlab/: about_the_homography_between_img0_and_the_grid.m
